--- a/app_save/config/security.yml
+++ b/app_save/config/security.yml
@@ -2,7 +2,7 @@
 # https://symfony.com/doc/current/security.html
 security:
     encoders:
-        App\Syllabus\Entity\User:
+        AppBundle\Entity\User:
             algorithm: bcrypt
             cost: 12
 
